[gd_scene load_steps=3 format=3 uid="uid://dyrpgand40roj"]

[ext_resource type="Script" uid="uid://cyl3g46maqji2" path="res://menu/settings/input_button.gd" id="1_66e8n"]

[sub_resource type="LabelSettings" id="LabelSettings_80spb"]
font_size = 25
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="InputButton" type="PanelContainer"]
custom_minimum_size = Vector2(0, 38)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -19.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_66e8n")

[node name="Button" type="Button" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelAction" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Action"
label_settings = SubResource("LabelSettings_80spb")
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="LabelInput" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "SEX"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
